# ngx_http_alpaca_module

./: .gitignore  README.md  config  meeting notes.txt  ngx_http_alpaca_module.c
libalpaca/: Cargo.toml  build.rs
libalpaca/design/sample-site/: index.html  main.css
libalpaca/src/: aux.rs  deterministic.rs  distribution.rs  dom.rs  lib.rs  morphing.rs  pad.rs
old/: ngx_http_alpaca_module.c
old/libalpaca/: Cargo.toml  README.md
old/libalpaca/design/sample-site/: index.php
old/libalpaca/src/: aux.rs  distribution.rs  dom.rs  morphing.rs  pad.rs
testing_ALPaCA/: res  response_handler.py  testing.py  utils.py
testing_ALPaCA/Deterministic/: nginx_fake_imgs.conf  nginx_fake_imgs_glob.conf  nginx_inline_all.conf  nginx_inline_some.conf  nginx_simple.conf
testing_ALPaCA/Probabilistic/: nginx_fake_imgs.conf  nginx_inline_all.conf  nginx_inline_some.conf  nginx_simple.conf  prob.dist
utils/map/: CMakeLists.txt  map.c
